@@ -56,6 +56,10 @@
 # context-engine-id         SNMP Context Engine ID                       any
 # context-name              SNMP Context Name                            any
 # context-id                SNMP context configuration entry ID          any
+# pdu-type-pattern          SNMP PDU type (SET/GET/GETNEXT/GETBULK)      any
+# oid-prefix-pattern-list   list of OIDs regexps to match OIDs in SNMP
+#                           PDU var-binds                                any
+# content-id                SNMP PDU configuration entry ID              any
 # transport-address-pattern-list
 #                           true if SNMP Manager is sending packets from
 #                           transport endpoints that match these regexps any
@@ -66,7 +70,10 @@
 # secret                    trunk encryption key                         any
 # trunk-id                  trunk ID                                     any
 # matching-context-id-list  true if incoming SNMP message is targeted
-#                           at this SNMP Context                         any
+#                           to this SNMP Context                         any
+# matching-content-id-list  true if incoming SNMP PDU is of specified 
+#                           type and carries specified OID(s) in 
+#                           arbitrary order                              any
 # matching-credentials-id-list
 #                           true if incoming SNMP message is using
 #                           credentials from this list                   any
@@ -180,6 +187,27 @@ context-group {
   context-id: any-context
 }
 
+content-group {
+  pdu-type-pattern: .*
+  oid-prefix-pattern-list: 1\.3\.6
+
+  # ordering of oid-prefix-pattern-list is important here
+
+  write-pdu-group {
+    pdu-type-pattern: SET
+    content-id: set-content
+  }
+
+  if-subtree-group {
+    oid-prefix-pattern-list: 1\.3\.6\.1\.2\.1\.2
+    content-id: if-subtree-content
+  }
+  
+  others {
+    content-id: any-content
+  }
+}
+
 peers-group {
   transport-domain: 1.3.6.1.6.1.1.100
 
@@ -212,14 +240,22 @@ trunking-group {
 
 routing-map {
   matching-context-id-list: any-context
+  matching-content-id-list: any-content
 
   route-1 {
+    matching-credentials-id-list: config-1 config-2 config-121
+    matching-content-id-list: if-subtree-content
+    matching-peer-id-list: 100 111
+    using-trunk-id-list: clienttrunk
+  }
+
+  route-2 {
     matching-credentials-id-list: config-1 config-121
     matching-peer-id-list: 100
     using-trunk-id-list: servertrunk
   }
   
-  route-2 {
+  route-3 {
     matching-credentials-id-list: config-2
     matching-peer-id-list: 111
     using-trunk-id-list: clienttrunk
