@@ -7,6 +7,7 @@
   SNMP authentication credentials
 - Dead trunk detection implemented
 - Switched to Python logging module
+- SNMP request PDU type and request OIDs can now be used for request routing
 
 0.0.1 (released 01-04-2014)
 ---------------------------
